[workspace]
resolver = "2"
members = [
  "deferred-settlement/contracts/deferred-settlement",
  "marketplace-contracts/contracts/conditional-refund-contract",
  "marketplace-contracts/contracts/milestone-payment",
  "marketplace-contracts/contracts/staggered-payment",
  "marketplace-contracts/contracts/escrow_arbitration_contract",
  "marketplace-contracts/contracts/mutual_cancellation",
  "marketplace-contracts/contracts/timelock",
  "marketplace-contracts/contracts/installment_payment_contract"

  # "multisign-escrow/contracts/multisign-escrow",
]

[workspace.dependencies]
soroban-sdk = "22"
# escrow_arbitration_contract = { path = "marketplace-contracts/contracts/escrow_arbitration_contract" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
